# DataServerQt

./: CMakeLists.txt  QtDataServer_global.h  qtdataserver.cpp  qtdataserver.h
apps/DataServer/: CMakeLists.txt  dataserver.cpp  dataserver.h  main.cpp
docs/: Architecture.md  TODO.md  TODO.odt
examples/Client/: CMakeLists.txt  PacketType.h  client.h  main.cpp
examples/Server/: CMakeLists.txt  main.cpp
libs/Core/: CMakeLists.txt  fakeclock.cpp  fakeclock.h  iclock.h  systemclock.cpp  systemclock.h
libs/Engine/: CMakeLists.txt  dataengine.cpp  dataengine.h
libs/HardwareFactory/: CMakeLists.txt  hardwaremodulefactory.cpp  hardwaremodulefactory.h  ihardwaremodulefactory.h
libs/LiveScheduler/: CMakeLists.txt  isender.h  livescheduler.cpp  livescheduler.h  udpsender.cpp
libs/ModuleLoader/: CMakeLists.txt  ModuleLoader_global.h  moduleloader.cpp  moduleloader.h
libs/PacketDispatcher/: CMakeLists.txt  PacketDispatcher_global.h  packetdispatcher.cpp  packetdispatcher.h
libs/UdpSender/: CMakeLists.txt  UdpSender_global.h  udpsender.cpp  udpsender.h
libs/UdpServer/: CMakeLists.txt  UdpServer_global.h  udpserver.cpp  udpserver.h
libs/client/: CMakeLists.txt  Client_global.h  client.cpp  client.h
libs/common/: CMakeLists.txt  Common_global.h  command.h  common.cpp  common.h  dataengine.cpp  dataengine.h  datatypes.h  linearoperation.cpp  linearoperation.h  memory.h  memorystorage.cpp  memorystorage.h  operation.h  sumoperation.cpp  sumoperation.h  tag.cpp  tag.h
libs/configuration/: CMakeLists.txt  configuration.cpp  configuration.h  crateinfo.cpp  crateinfo.h  moduleinfo.cpp  moduleinfo.h  moduletype.h  systemconfiguration.cpp  systemconfiguration.h  taginfo.cpp  taginfo.h
libs/dataprotocol/: CMakeLists.txt  datatypes.cpp  endpoint.cpp  endpoint.h  isender.h  packetreader.cpp  packetreader.h  packetwriter.cpp  packetwriter.h
libs/dataprotocol/protocol/: errorpackets.h  livedata.h  packetheader.cpp  packetheader.h  packettype.h  publishheader.h  subscribe.cpp  subscribe.h  subscribelistrequest.cpp  subscribelistrequest.h  subscriberesponse.cpp  subscriberesponse.h  subscriptionpackets.cpp  subscriptionpackets.h
libs/datasource/: CMakeLists.txt  countergenerator.cpp  countergenerator.h  datasourcemanager.cpp  datasourcemanager.h  fakedatasource.cpp  fakedatasource.h  generatordatasource.cpp  generatordatasource.h  idatasource.h  imoduledatasink.h  imodulegenerator.h  moduledatasource.cpp  moduledatasource.h  periodicdatasourcerunner.cpp  periodicdatasourcerunner.h
libs/datatypes/: datatypes.h
libs/hardware/: CMakeLists.txt  fakelcardmodule.cpp  fakelcardmodule.h  ihardwaremodule.h  imoduledevice.h  lcardmodule.cpp  lcardmodule.h  moduledatasource.cpp  moduledatasource.h
libs/livestorage/: CMakeLists.txt  livestorage.cpp  livestorage.h
libs/publisher/: CMakeLists.txt  publisher.cpp  publisher.h
libs/publishers/: CMakeLists.txt  publisher.cpp  publisher.h
libs/server/: CMakeLists.txt  Server_global.h  clientsession.cpp  clientsession.h  dataserver.cpp  dataserver.h  packetheader.h  packettype.h
libs/subscriptions/: CMakeLists.txt  endpoint.cpp  endpoint.h  subscription.cpp  subscription.h  subscriptionmanager.cpp  subscriptionmanager.h
tests/: CMakeLists.txt  main.cpp  test_dataprotocol.cpp  test_dataprotocol.h  testsrv.cpp  testsrv.h  tst_common.cpp  tst_common.h  tst_core.cpp  tst_core.h  tst_dataprotocol.cpp  tst_dataprotocol.h  tst_datasource.cpp  tst_datasource.h  tst_engine.cpp  tst_engine.h  tst_hardware.cpp  tst_hardware.h  tst_livescheduler.cpp  tst_livescheduler.h  tst_livestorage.cpp  tst_livestorage.h  tst_publisher.cpp  tst_publisher.h  tst_subscriptions.cpp  tst_subscriptions.h  tst_test_common.cpp  tst_udpsender.cpp  tst_udpsender.h  tst_udpserver.cpp  tst_udpserver.h
